--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -26,6 +26,8 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/JohnsonRan/ClashRule
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Bahamut.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/PorxyMedia.list
+ruleset=📢 TIDAL,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/TIDAL.list
+ruleset=📢 Tiktok,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/Tiktok.list
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
@@ -43,6 +45,8 @@ custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 自动选
 custom_proxy_group=🎥 Pornhub`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇹🇭 泰国节点
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📢 Tiktok`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换
+custom_proxy_group=📢 TIDAL`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
 custom_proxy_group=🎪 Discord`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
