feat: 添加自定义直连域名

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -3,6 +3,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/ChinaIP.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/custom.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/ChinaDomain.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/AntiAD.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/YouTube.list
