--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -12,6 +12,7 @@ ruleset=🎪 Discord,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Origin.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Battlenet.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Sony.list
 ruleset=🎮 Steam,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Steam.list
 ruleset=🎥 PrimeVideo,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/Amazon.list
 ruleset=🎥 DisneyPlus,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/DisneyPlus.list
