feat: 添加自定义代理域名规则

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -24,6 +24,7 @@ ruleset=📢 谷歌服务,https://raw.githubusercontent.com/JohnsonRan/ClashRule
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Microsoft.list
 ruleset=Ⓜ️ OneDrive,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/OneDrive.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/GFWList.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/customProxy.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Apple.list
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Bahamut.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/ChinaMedia.list
