--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -2,12 +2,13 @@
 ;ClashRules-AIO
 
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/ChinaIP.list
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/custom.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/ChinaDomain.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/AntiAD.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/YouTube.list
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/Netflix.list
+ruleset=🎥 Netflix,[]GEOIP,NETFLIX
 ruleset=🎪 Discord,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Discord.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Origin.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Game/Epic.list
@@ -18,9 +19,10 @@ ruleset=🎥 PrimeVideo,https://raw.githubusercontent.com/JohnsonRan/ClashRules-
 ruleset=🎥 DisneyPlus,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/DisneyPlus.list
 ruleset=🎥 Pornhub,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/Pornhub.list
 ruleset=🎥 Bilibili,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Video/Pornhub.list
-ruleset=📲 电报消息,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Telegram.list
+ruleset=📲 Telegram,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Telegram.list
+ruleset=📲 Telegram,[]GEOIP,TELEGRAM
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Google.list
-ruleset=📢 谷歌服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/Google.list
+ruleset=📢 谷歌服务,[]GEOIP,GOOGLE
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/Microsoft.list
 ruleset=Ⓜ️ OneDrive,https://raw.githubusercontent.com/JohnsonRan/ClashRules-AIO/master/lists/OneDrive.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-Gen/generated/GFWList.list
@@ -40,7 +42,7 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 PrimeVideo`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
