feat: 添加 Github 分流

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -27,6 +27,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/JohnsonRan/ClashRule
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Bahamut.list
 ruleset=📢 TIDAL,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/TIDAL.list
 ruleset=📢 Tiktok,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/Tiktok.list
+ruleset=🎁 Github,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Github.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/PorxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/GenRulesN/GFWList.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/customProxy.list
@@ -44,7 +45,9 @@ custom_proxy_group=🚀 手动切换 3`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎁 Github`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎥 PrimeVideo`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
@@ -52,14 +55,13 @@ custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 自动选
 custom_proxy_group=🎥 Pornhub`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎥 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇹🇭 泰国节点
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
+custom_proxy_group=Ⓜ️ OneDrive`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=📢 Tiktok`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=📢 TIDAL`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3
 custom_proxy_group=🎪 Discord`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
-custom_proxy_group=Ⓜ️ OneDrive`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇷🇺 俄罗斯节点`[]🇹🇷 土耳其节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
