--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -2,39 +2,39 @@
 ;ClashRules-conf
 
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/custom.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/GenRulesN/AntiAD.list
-ruleset=📢 谷歌服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Google.list
+ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/custom.list
+ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/AntiAD.list
+ruleset=📢 谷歌服务,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Google.list
 ruleset=📢 谷歌服务,[]GEOIP,GOOGLE
-ruleset=📹 油管视频,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/YouTube.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/Netflix.list
+ruleset=📹 油管视频,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/YouTube.list
+ruleset=🎥 Netflix,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/Netflix.list
 ruleset=🎥 Netflix,[]GEOIP,NETFLIX
-ruleset=🎪 Discord,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Discord.list
-ruleset=🎮 Steam,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Game/Steam.list
-ruleset=🎮 Wild Rift,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Game/WildRift.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Game/Origin.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Game/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Game/Battlenet.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Game/Sony.list
-ruleset=🎥 PrimeVideo,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/Amazon.list
-ruleset=🎥 DisneyPlus,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/DisneyPlus.list
-ruleset=🎥 Pornhub,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/Pornhub.list
-ruleset=🎥 Bilibili,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/Pornhub.list
-ruleset=📲 Telegram,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Telegram.list
+ruleset=🎪 Discord,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Discord.list
+ruleset=🎮 Steam,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Game/Steam.list
+ruleset=🎮 Wild Rift,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Game/WildRift.list
+ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Game/Origin.list
+ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Game/Epic.list
+ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Game/Battlenet.list
+ruleset=🎮 游戏平台,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Game/Sony.list
+ruleset=🎥 PrimeVideo,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/Amazon.list
+ruleset=🎥 DisneyPlus,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/DisneyPlus.list
+ruleset=🎥 Pornhub,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/Pornhub.list
+ruleset=🎥 Bilibili,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/Pornhub.list
+ruleset=📲 Telegram,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Telegram.list
 ruleset=📲 Telegram,[]GEOIP,TELEGRAM
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Microsoft.list
-ruleset=Ⓜ️ OneDrive,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/OneDrive.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Apple.list
-ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Bahamut.list
-ruleset=📢 TIDAL,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/TIDAL.list
-ruleset=📢 Tiktok,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/Tiktok.list
-ruleset=🎁 Github,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Github.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/PorxyMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/GenRulesN/GFWList.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/customProxy.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/master/lists/Video/ChinaMedia.list
+ruleset=Ⓜ️ 微软服务,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Microsoft.list
+ruleset=Ⓜ️ OneDrive,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/OneDrive.list
+ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Apple.list
+ruleset=📺 巴哈姆特,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Bahamut.list
+ruleset=📢 TIDAL,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/TIDAL.list
+ruleset=📢 Tiktok,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/Tiktok.list
+ruleset=🎁 Github,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Github.list
+ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/PorxyMedia.list
+ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/GFWList.list
+ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/customProxy.list
+ruleset=🌏 国内媒体,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/ChinaMedia.list
 ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/ClashRules-conf/GenRulesN/ChinaDomain.list
+ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/ChinaDomain.list
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
@@ -82,3 +82,5 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
+clash_rule_base=https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/config/GeneralClashConfig.yml
