--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -29,7 +29,7 @@ ruleset=📺 巴哈姆特,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf
 ruleset=📢 TIDAL,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/TIDAL.list
 ruleset=📢 Tiktok,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/Tiktok.list
 ruleset=🎁 Github,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Github.list
-ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/PorxyMedia.list
+ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/ProxyMedia.list
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/GFWList.list
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/customProxy.list
 ruleset=🌏 国内媒体,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Video/ChinaMedia.list
@@ -48,7 +48,7 @@ custom_proxy_group=🎁 Github`select`[]🚀 节点选择`[]♻️ 自动选择`
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎥 PrimeVideo`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎥 Pornhub`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
@@ -77,7 +77,6 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`
 custom_proxy_group=🇹🇭 泰国节点`url-test`(TH|泰|泰国)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(TR|土|土耳其)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(RU|俄|俄罗斯)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
 enable_rule_generator=true
