add custom reject rule

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -3,6 +3,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/custom.list
+ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/reject.list
 ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/AntiAD.list
 ruleset=📢 谷歌服务,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Google.list
 ruleset=📢 谷歌服务,[]GEOIP,GOOGLE
