fix: wtf did i do

--- a/config/Server.ini
+++ b/config/Server.ini
@@ -2,7 +2,8 @@
 ;ClashRules-conf
 
 ;设置规则标志位
-ruleset=🚀 节点选择,[]FINAL
+ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/GFWList.list
+ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/ChinaDomain.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ;设置规则标志位
 
