--- a/config/Server.ini
+++ b/config/Server.ini
@@ -2,17 +2,23 @@
 ;ClashRules-conf
 
 ;设置规则标志位
+ruleset=📢 谷歌服务,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Google.list
+ruleset=📢 谷歌服务,[]GEOIP,GOOGLE
+ruleset=🎁 Github,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/Github.list
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/GFWList.list
+ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@master/lists/custom.list
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/JohnsonRan/ClashRules-conf@GenRulesN/ChinaDomain.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 手动切换 1`select`.*
+custom_proxy_group=🚀 手动切换 2`select`.*
+custom_proxy_group=🚀 手动切换 3`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎁 Github`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 
 ;设置分组标志位
