--- a/config/Server.ini
+++ b/config/Server.ini
@@ -12,7 +12,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换 1`[]🚀 手动切换 2`[]🚀 手动切换 3`[]DIRECT
 custom_proxy_group=🚀 手动切换 1`select`.*
 custom_proxy_group=🚀 手动切换 2`select`.*
 custom_proxy_group=🚀 手动切换 3`select`.*
