--- a/config/GeneralClashConfig.yml
+++ b/config/GeneralClashConfig.yml
@@ -12,94 +12,6 @@ dns:
   enable: true
   ipv6: false
   enhanced-mode: redir-host
-  fake-ip-filter:
-  - ".lan"
-  - ".localdomain"
-  - ".example"
-  - ".invalid"
-  - ".localhost"
-  - ".test"
-  - ".local"
-  - ".home.arpa"
-  - time.*.com
-  - time.*.gov
-  - time.*.edu.cn
-  - time.*.apple.com
-  - time1.*.com
-  - time2.*.com
-  - time3.*.com
-  - time4.*.com
-  - time5.*.com
-  - time6.*.com
-  - time7.*.com
-  - ntp.*.com
-  - ntp1.*.com
-  - ntp2.*.com
-  - ntp3.*.com
-  - ntp4.*.com
-  - ntp5.*.com
-  - ntp6.*.com
-  - ntp7.*.com
-  - "*.time.edu.cn"
-  - "*.ntp.org.cn"
-  - "+.pool.ntp.org"
-  - time1.cloud.tencent.com
-  - "+.music.163.com"
-  - "*.126.net"
-  - musicapi.taihe.com
-  - music.taihe.com
-  - songsearch.kugou.com
-  - trackercdn.kugou.com
-  - "*.kuwo.cn"
-  - api-jooxtt.sanook.com
-  - api.joox.com
-  - joox.com
-  - "+.y.qq.com"
-  - streamoc.music.tc.qq.com
-  - mobileoc.music.tc.qq.com
-  - isure.stream.qqmusic.qq.com
-  - dl.stream.qqmusic.qq.com
-  - aqqmusic.tc.qq.com
-  - amobile.music.tc.qq.com
-  - "*.xiami.com"
-  - "+.music.migu.cn"
-  - "+.msftconnecttest.com"
-  - "+.msftncsi.com"
-  - localhost.ptlogin2.qq.com
-  - localhost.sec.qq.com
-  - "+.srv.nintendo.net"
-  - "+.stun.playstation.net"
-  - xbox.*.microsoft.com
-  - xnotify.xboxlive.com
-  - "+.battlenet.com.cn"
-  - "+.wotgame.cn"
-  - "+.wggames.cn"
-  - "+.wowsgame.cn"
-  - "+.wargaming.net"
-  - "+.stun.*.*"
-  - "+.stun.*.*.*"
-  - "+.stun.*.*.*.*"
-  - "+.stun.*.*.*.*.*"
-  - mesu.apple.com
-  - swscan.apple.com
-  - swquery.apple.com
-  - swdownload.apple.com
-  - swcdn.apple.com
-  - swdist.apple.com
-  - lens.l.google.com
-  - "*.mcdn.bilivideo.cn"
-  - proxy.golang.org
-  - heartbeat.belkin.com
-  - "*.linksys.com"
-  - "*.linksyssmartwifi.com"
-  - "*.router.asus.com"
-  - "+.nflxvideo.net"
-  - "*.square-enix.com"
-  - "*.finalfantasyxiv.com"
-  - "*.ffxiv.com"
-  default-nameserver:
-  - 223.5.5.5
-  - 223.6.6.6
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -127,23 +39,8 @@ dns:
     - "+.githubusercontent.com"
     - "+.googlevideo.com"
   nameserver:
-  - 223.5.5.5
-  - 223.6.6.6
+  - quic://x.passcloud.xyz:784
+  - tls://x.passcloud.xyz
   fallback:
-  - tls://8.8.8.8
-  - tls://8.8.4.4
-  listen: 127.0.0.1:7874
-tun:
-  enable: true
-  stack: system
-  dns-hijack:
-  - tls://8.8.8.8:53
-  - tls://8.8.4.4:53
-profile:
-  tracing: true
-  store-selected: true
-  store-fake-ip: true
-redir-port: 7892
-tproxy-port: 7895
-port: 7890
-secret: '123456'
+  - https://a.passcloud.xyz/dns-query
+  - quic://a.passcloud.xyz:784
