--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -4,6 +4,9 @@
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/custom.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/customProxy.list
+ruleset=🎯 全球直连,[]GEOSITE,apple-cn
+ruleset=🎯 全球直连,[]GEOIP,CN,no-reslove
+ruleset=🛑 广告拦截,[]GEOSITE,category-ads-all
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/reject.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/YouTube.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Google.list
@@ -31,7 +34,8 @@ ruleset=📢 Tiktok,https://raw.githubusercontent.com/JohnsonRan/CRules/master/l
 ruleset=🎁 Github,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Github.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ProxyMedia.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ChinaMedia.list
-ruleset=🎯 全球直连,[]GEOIP,CN,no-reslove
+ruleset=🚀 节点选择,[]GEOSITE,gfw
+ruleset=🎯 全球直连,[]GEOSITE,cn
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
