--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -37,7 +37,7 @@ ruleset=🌏 国内媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/ma
 ruleset=🚀 节点选择,[]GEOSITE,gfw
 ruleset=🎯 全球直连,[]GEOIP,CN,no-reslove
 ruleset=🎯 全球直连,[]GEOSITE,cn
-ruleset=🐟 漏网之鱼,[]MATCH
+ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
