--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -1,91 +1,85 @@
 [custom]
-;CRules
+ruleset=全球直连,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/custom.list
+ruleset=节点选择,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/customProxy.list
+ruleset=全球直连,[]GEOSITE,apple-cn
+ruleset=广告拦截,[]GEOSITE,category-ads-all
+ruleset=广告拦截,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/reject.list
+ruleset=油管视频,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/YouTube.list
+ruleset=谷歌服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Google.list
+ruleset=谷歌服务,[]GEOIP,GOOGLE,no-reslove
+ruleset=Netflix,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Netflix.list
+ruleset=Netflix,[]GEOIP,NETFLIX,no-reslove
+ruleset=Discord,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Discord.list
+ruleset=Steam,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Steam.list
+ruleset=Xbox,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Xbox.list
+ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Origin.list
+ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Epic.list
+ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Battlenet.list
+ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Sony.list
+ruleset=PrimeVideo,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Amazon.list
+ruleset=DisneyPlus,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/DisneyPlus.list
+ruleset=Porns,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Pornhub.list
+ruleset=Porns,[]GEOSITE,category-porn
+ruleset=Bilibili,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Bilibili.list
+ruleset=Telegram,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Telegram.list
+ruleset=Telegram,[]GEOIP,TELEGRAM,no-reslove
+ruleset=微软服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Microsoft.list
+ruleset=OneDrive,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/OneDrive.list
+ruleset=苹果服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Apple.list
+ruleset=巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Bahamut.list
+ruleset=Tiktok,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/TikTok.list
+ruleset=Github,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Github.list
+ruleset=国外媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ProxyMedia.list
+ruleset=国内媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ChinaMedia.list
+ruleset=节点选择,[]GEOSITE,gfw
+ruleset=全球直连,[]GEOIP,CN,no-reslove
+ruleset=全球直连,[]GEOSITE,cn
+ruleset=漏网之鱼,[]FINAL
 
-;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/custom.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/customProxy.list
-ruleset=🎯 全球直连,[]GEOSITE,apple-cn
-ruleset=🛑 广告拦截,[]GEOSITE,category-ads-all
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/reject.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/YouTube.list
-ruleset=📢 谷歌服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Google.list
-ruleset=📢 谷歌服务,[]GEOIP,GOOGLE,no-reslove
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Netflix.list
-ruleset=🎥 Netflix,[]GEOIP,NETFLIX,no-reslove
-ruleset=🎪 Discord,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Discord.list
-ruleset=🎮 Steam,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Steam.list
-ruleset=🎮 Xbox,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Xbox.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Origin.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Battlenet.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Sony.list
-ruleset=🎥 PrimeVideo,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Amazon.list
-ruleset=🎥 DisneyPlus,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/DisneyPlus.list
-ruleset=🎥 Porns,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Pornhub.list
-ruleset=🎥 Porns,[]GEOSITE,category-porn
-ruleset=🎥 Bilibili,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Bilibili.list
-ruleset=📲 Telegram,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Telegram.list
-ruleset=📲 Telegram,[]GEOIP,TELEGRAM,no-reslove
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Microsoft.list
-ruleset=Ⓜ️ OneDrive,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/OneDrive.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Apple.list
-ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Bahamut.list
-ruleset=📢 Tiktok,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/TikTok.list
-ruleset=🎁 Github,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Github.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ProxyMedia.list
-ruleset=🌏 国内媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ChinaMedia.list
-ruleset=🚀 节点选择,[]GEOSITE,gfw
-ruleset=🎯 全球直连,[]GEOIP,CN,no-reslove
-ruleset=🎯 全球直连,[]GEOSITE,cn
-ruleset=🐟 漏网之鱼,[]FINAL
-;设置规则标志位
-
-;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🎁 Github`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 PrimeVideo`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 Porns`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇹🇭 泰国节点
-custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ OneDrive`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📢 Tiktok`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=🎪 Discord`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎮 Steam`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇷🇺 俄罗斯节点`[]🇹🇷 土耳其节点`[]🇦🇷 阿根廷节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎮 Xbox`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇷🇺 俄罗斯节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|JP|Japan)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|TW|Taiwan)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|狮城|SG|Singapore)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇲🇾 马来西亚`url-test`(马|Malaysia)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇹🇭 泰国节点`url-test`(TH|泰)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇻🇳 越南节点`url-test`(越|Vietnam)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳洲|澳大利亚|Australia)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|US|United States)`https://1.1.1.1/generate_204`300,,150
-custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(RU|俄|俄罗斯)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|Canada)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherland)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|United Kingdom)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德|德意志|Germany)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(TR|土|土耳其)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇦🇷 阿根廷节点`url-test`(阿根廷|Argentina)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=🇮🇳 印度节点`url-test`(印|India)`https://1.1.1.1/generate_204`300,,50
-;设置分组标志位
+custom_proxy_group=节点选择`select`[]自动选择`[]香港节点`[]日本节点`[]台湾节点`[]狮城节点`[]美国节点`[]手动切换`[]DIRECT
+custom_proxy_group=手动切换`select`.*
+custom_proxy_group=自动选择`url-test`.*`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=Github`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Telegram`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=谷歌服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=油管视频`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Netflix`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=PrimeVideo`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=DisneyPlus`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Porns`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Bilibili`select`[]DIRECT`[]香港节点`[]台湾节点`[]泰国节点
+custom_proxy_group=巴哈姆特`select`[]台湾节点`[]节点选择`[]手动切换`[]DIRECT
+custom_proxy_group=微软服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=OneDrive`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=Tiktok`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
+custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=国内媒体`select`[]DIRECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]手动切换
+custom_proxy_group=Discord`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=苹果服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=游戏平台`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
+custom_proxy_group=Steam`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]阿根廷节点`[]手动切换`[]DIRECT
+custom_proxy_group=Xbox`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]手动切换`[]DIRECT
+custom_proxy_group=全球直连`select`[]DIRECT`[]节点选择`[]自动选择
+custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=漏网之鱼`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=香港节点`url-test`(港|HK|Hong Kong)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=日本节点`url-test`(日本|JP|Japan)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=韩国节点`url-test`(KR|Korea|KOR|首尔|韩)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=台湾节点`url-test`(台|新北|TW|Taiwan)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=狮城节点`url-test`(新加坡|狮城|SG|Singapore)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=马来西亚`url-test`(马|Malaysia)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=泰国节点`url-test`(TH|泰)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=越南节点`url-test`(越|Vietnam)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=澳大利亚`url-test`(澳洲|澳大利亚|Australia)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=美国节点`url-test`(美|US|United States)`https://1.1.1.1/generate_204`300,,150
+custom_proxy_group=俄罗斯节点`url-test`(RU|俄|俄罗斯)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=加拿大节点`url-test`(加拿大|Canada)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=荷兰节点`url-test`(荷兰|Netherland)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=英国节点`url-test`(英国|United Kingdom)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=德国节点`url-test`(德|德意志|Germany)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=土耳其节点`url-test`(TR|土|土耳其)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=阿根廷节点`url-test`(阿根廷|Argentina)`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=印度节点`url-test`(印|India)`https://1.1.1.1/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
