--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -1,40 +1,38 @@
 [custom]
 ruleset=全球直连,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/custom.list
 ruleset=节点选择,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/customProxy.list
-ruleset=全球直连,[]GEOSITE,apple-cn
 ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/reject.list
-ruleset=油管视频,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/YouTube.list
-ruleset=谷歌服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Google.list
+ruleset=油管视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=谷歌服务,[]GEOIP,GOOGLE,no-reslove
-ruleset=Netflix,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Netflix.list
+ruleset=谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=Netflix,[]GEOIP,NETFLIX,no-reslove
-ruleset=Discord,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Discord.list
-ruleset=Steam,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Steam.list
-ruleset=Xbox,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Xbox.list
-ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Origin.list
-ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Epic.list
-ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Battlenet.list
-ruleset=游戏平台,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Game/Sony.list
-ruleset=PrimeVideo,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Amazon.list
-ruleset=DisneyPlus,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/DisneyPlus.list
+ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
+ruleset=Discord,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
+ruleset=Steam,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Games/Steam.list
+ruleset=Xbox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
+ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.list
+ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Battle/Battle.list
+ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+ruleset=PrimeVideo,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
+ruleset=DisneyPlus,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=Porns,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Pornhub.list
 ruleset=Porns,[]GEOSITE,category-porn
 ruleset=Bilibili,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/Bilibili.list
 ruleset=Telegram,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Telegram.list
 ruleset=Telegram,[]GEOIP,TELEGRAM,no-reslove
 ruleset=微软服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Microsoft.list
-ruleset=OneDrive,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/OneDrive.list
+ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=苹果服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Apple.list
-ruleset=巴哈姆特,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Bahamut.list
-ruleset=Tiktok,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/TikTok.list
-ruleset=Github,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Github.list
-ruleset=国外媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ProxyMedia.list
-ruleset=国内媒体,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Video/ChinaMedia.list
+ruleset=巴哈姆特,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
+ruleset=Tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=Github,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=节点选择,[]GEOSITE,gfw
 ruleset=全球直连,[]GEOIP,CN,no-reslove
 ruleset=全球直连,[]GEOSITE,cn
-ruleset=漏网之鱼,[]FINAL
+ruleset=漏网之鱼,[]MATCH
 
 custom_proxy_group=节点选择`select`[]自动选择`[]香港节点`[]日本节点`[]台湾节点`[]狮城节点`[]美国节点`[]手动切换`[]DIRECT
 custom_proxy_group=手动切换`select`.*
@@ -53,7 +51,6 @@ custom_proxy_group=微软服务`select`[]节点选择`[]美国节点`[]香港节
 custom_proxy_group=OneDrive`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=Tiktok`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
 custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=国内媒体`select`[]DIRECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]手动切换
 custom_proxy_group=Discord`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=苹果服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=游戏平台`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
