--- a/config/GeneralClashConfig.yml
+++ b/config/GeneralClashConfig.yml
@@ -7,8 +7,9 @@ ipv6: false
 mode: rule
 log-level: warning
 external-controller: 0.0.0.0:9090
-experimental:
-  ignore-resolve-fail: true
+profile:
+  store-selected: true
+  store-fake-ip: true
 sniffer:
   enable: true
   sniffing:
@@ -29,35 +30,13 @@ sniffer:
 dns:
   enable: true
   ipv6: false
-  enhanced-mode: redir-host
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16
   fallback-filter:
     geoip: true
     geoip-code: CN
     geosite:
       - '!CN'
-    ipcidr:
-    - 0.0.0.0/8
-    - 10.0.0.0/8
-    - 100.64.0.0/10
-    - 127.0.0.0/8
-    - 169.254.0.0/16
-    - 172.16.0.0/12
-    - 192.0.0.0/24
-    - 192.0.2.0/24
-    - 192.88.99.0/24
-    - 192.168.0.0/16
-    - 198.18.0.0/15
-    - 198.51.100.0/24
-    - 203.0.113.0/24
-    - 224.0.0.0/4
-    - 240.0.0.0/4
-    - 255.255.255.255/32
-    domain:
-    - '+.google.com'
-    - '+.facebook.com'
-    - '+.youtube.com'
-    - '+.githubusercontent.com'
-    - '+.googlevideo.com'
   nameserver:
     - https://223.5.5.5/dns-query
     - https://120.53.53.53/dns-query
