add fallback group

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -34,9 +34,10 @@ ruleset=全球直连,[]GEOIP,CN,no-reslove
 ruleset=全球直连,[]GEOSITE,cn
 ruleset=漏网之鱼,[]MATCH
 
-custom_proxy_group=节点选择`select`[]自动选择`[]香港节点`[]日本节点`[]台湾节点`[]狮城节点`[]美国节点`[]手动切换`[]DIRECT
+custom_proxy_group=节点选择`select`[]故障转移`[]自动选择`[]香港节点`[]日本节点`[]台湾节点`[]狮城节点`[]美国节点`[]手动切换`[]DIRECT
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=自动选择`url-test`.*`https://1.1.1.1/generate_204`300,,50
+custom_proxy_group=故障转移`fallback`.*`https://1.1.1.1/generate_204`300,,50
 custom_proxy_group=Github`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=Telegram`select`[]节点选择`[]自动选择`[]狮城节点`[]香港节点`[]台湾节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=谷歌服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
