DIRECT apple by default

--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -3,6 +3,7 @@ ruleset=全球直连,https://raw.githubusercontent.com/JohnsonRan/CRules/master/
 ruleset=节点选择,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/customProxy.list
 ruleset=广告拦截,[]GEOSITE,category-ads-all
 ruleset=广告拦截,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/reject.list
+ruleset=苹果服务,[]GEOSITE,apple-cn
 ruleset=油管视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=谷歌服务,[]GEOIP,GOOGLE,no-reslove
 ruleset=谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
@@ -24,7 +25,6 @@ ruleset=Telegram,https://raw.githubusercontent.com/JohnsonRan/CRules/master/list
 ruleset=Telegram,[]GEOIP,TELEGRAM,no-reslove
 ruleset=微软服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Microsoft.list
 ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
-ruleset=苹果服务,https://raw.githubusercontent.com/JohnsonRan/CRules/master/lists/Apple.list
 ruleset=巴哈姆特,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=Tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=Github,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
@@ -53,7 +53,7 @@ custom_proxy_group=OneDrive`select`[]节点选择`[]美国节点`[]香港节点`
 custom_proxy_group=Tiktok`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
 custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=Discord`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=苹果服务`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=苹果服务`select`[]DIRECT`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=游戏平台`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
 custom_proxy_group=Steam`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]阿根廷节点`[]手动切换`[]DIRECT
 custom_proxy_group=Xbox`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]手动切换`[]DIRECT
@@ -72,7 +72,6 @@ custom_proxy_group=澳大利亚`url-test`(澳洲|澳大利亚|Australia)`https:/
 custom_proxy_group=美国节点`url-test`(美|US|United States)`https://1.1.1.1/generate_204`300,,150
 custom_proxy_group=俄罗斯节点`url-test`(RU|俄|俄罗斯)`https://1.1.1.1/generate_204`300,,50
 custom_proxy_group=加拿大节点`url-test`(加拿大|Canada)`https://1.1.1.1/generate_204`300,,50
-custom_proxy_group=荷兰节点`url-test`(荷兰|Netherland)`https://1.1.1.1/generate_204`300,,50
 custom_proxy_group=英国节点`url-test`(英国|United Kingdom)`https://1.1.1.1/generate_204`300,,50
 custom_proxy_group=德国节点`url-test`(德|德意志|Germany)`https://1.1.1.1/generate_204`300,,50
 custom_proxy_group=土耳其节点`url-test`(TR|土|土耳其)`https://1.1.1.1/generate_204`300,,50
