--- a/config/AIO.ini
+++ b/config/AIO.ini
@@ -53,7 +53,7 @@ custom_proxy_group=OneDrive`select`[]节点选择`[]美国节点`[]香港节点`
 custom_proxy_group=Tiktok`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
 custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]韩国节点`[]手动切换`[]DIRECT
 custom_proxy_group=Discord`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
-custom_proxy_group=苹果服务`select`[]DIRECT`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换`[]DIRECT
+custom_proxy_group=苹果服务`select`[]DIRECT`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]手动切换
 custom_proxy_group=游戏平台`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]韩国节点`[]俄罗斯节点`[]手动切换`[]DIRECT
 custom_proxy_group=Steam`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]阿根廷节点`[]手动切换`[]DIRECT
 custom_proxy_group=Xbox`select`[]节点选择`[]美国节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]俄罗斯节点`[]土耳其节点`[]手动切换`[]DIRECT
